[gd_scene load_steps=27 format=2]

[ext_resource path="res://src/scene/battle.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Enemys/png/Trash3.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemys/png/Trash2.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemys/png/Arrow1.png" type="Texture" id=4]
[ext_resource path="res://assets/hud/CountDown_2.png" type="Texture" id=5]
[ext_resource path="res://assets/World/DirtTileset.png" type="Texture" id=6]
[ext_resource path="res://assets/Enemys/png/Trash1.png" type="Texture" id=7]
[ext_resource path="res://assets/hud/CountDown_1.png" type="Texture" id=8]
[ext_resource path="res://src/script/Enemys/Enemy1.gd" type="Script" id=9]
[ext_resource path="res://assets/World/CliffTileset.tres" type="TileSet" id=10]
[ext_resource path="res://assets/tileset-wesley.png" type="Texture" id=11]
[ext_resource path="res://assets/audio/Correct.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/audio/Wrong.wav" type="AudioStream" id=13]

[sub_resource type="TileSet" id=1]
0/name = "DirtTileset.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 176, 80 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 3 ), 16, Vector2( 4, 0 ), 176, Vector2( 4, 1 ), 182, Vector2( 4, 2 ), 434, Vector2( 4, 3 ), 50, Vector2( 4, 4 ), 178, Vector2( 5, 0 ), 248, Vector2( 5, 1 ), 255, Vector2( 5, 2 ), 507, Vector2( 5, 3 ), 59, Vector2( 5, 4 ), 251, Vector2( 6, 0 ), 440, Vector2( 6, 1 ), 447, Vector2( 6, 2 ), 510, Vector2( 6, 3 ), 62, Vector2( 6, 4 ), 446, Vector2( 7, 0 ), 152, Vector2( 7, 1 ), 155, Vector2( 7, 2 ), 218, Vector2( 7, 3 ), 26, Vector2( 7, 4 ), 154, Vector2( 8, 0 ), 184, Vector2( 8, 1 ), 191, Vector2( 8, 2 ), 506, Vector2( 8, 3 ), 58, Vector2( 8, 4 ), 186, Vector2( 9, 0 ), 443, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 442, Vector2( 9, 3 ), 190, Vector2( 10, 2 ), 250, Vector2( 10, 3 ), 187 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tileset-wesley.png 1"
1/texture = ExtResource( 11 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 48, 16, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tileset-wesley.png 2"
2/texture = ExtResource( 11 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 400, 48, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/font/Kanit-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = SubResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "swipe"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -36.7831, -186.952 ), Vector2( -36.7831, -279.81 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "swipe"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect_down3:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -41.6246, 127.975 ), Vector2( -41.625, 217.975 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect_down3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.929412 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "swipe"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -38.2774, -192.025 ), Vector2( -38.277, -279.81 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.945367 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "swipe"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect_down2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -37.4046, 127.975 ), Vector2( -37.405, 217.975 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect_down2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.945367 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "swipe"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -38.2774, -192.025 ), Vector2( -38.277, -279.81 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.945367 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "swipe"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect_down:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -38.2774, 127.975 ), Vector2( -38.2774, 217.975 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect_down:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.945367 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFontData" id=10]
font_path = "res://assets/font/Kanit-Regular.ttf"

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = SubResource( 10 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://assets/font/Kanit-Regular.ttf"

[sub_resource type="DynamicFont" id=13]
size = 64
font_data = SubResource( 12 )

[node name="Trash" type="Node2D"]
script = ExtResource( 9 )

[node name="BG" type="ColorRect" parent="."]
margin_left = -6.10352e-05
margin_top = -2.66968
margin_right = 1348.0
margin_bottom = 782.33
color = Color( 0.462745, 0.203922, 0.160784, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 184.0
margin_right = 1184.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="battle" parent="." instance=ExtResource( 1 )]
position = Vector2( 49.1843, 1.18344 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1900540, 0, 196608, 1900541, 0, 196609, 1900542, 0, 196609, 1900543, 0, 196609, 1835008, 0, 196609, 1835009, 0, 196609, 1835010, 0, 196609, 1835011, 0, 196609, 1835012, 0, 196609, 1835013, 0, 196609, 1835014, 0, 196609, 1835015, 0, 196609, 1835016, 0, 196609, 1835017, 0, 196609, 1835018, 0, 196609, 1835019, 0, 196609, 1835020, 0, 196609, 1835021, 0, 196609, 1835022, 0, 196609, 1835023, 0, 196609, 1835024, 0, 196609, 1835025, 0, 196609, 1835026, 0, 196609, 1835027, 0, 196609, 1835028, 0, 196609, 1835029, 0, 196609, 1835030, 0, 196609, 1835031, 0, 196609, 1835032, 0, 196609, 1835033, 0, 196609, 1835034, 0, 196609, 1835035, 0, 196609, 1835036, 0, 196609, 1835037, 0, 196609, 1835038, 0, 196609, 1835039, 0, 196609, 1835040, 0, 196609, 1835041, 0, 196609, 1835042, 0, 196609, 1835043, 0, 196609, 1835044, 0, 196609, 1835045, 0, 196609, 1835046, 0, 196609, 1835047, 0, 196609, 1835048, 0, 196609, 1835049, 0, 196609, 1835050, 0, 196609, 1835051, 0, 196609, 1835052, 0, 196609, 1835053, 0, 196609, 1835054, 0, 196609, 1835055, 0, 196609, 1835056, 0, 196609, 1835057, 0, 196609, 1835058, 0, 196609, 1835059, 0, 196609, 1835060, 0, 196609, 1835061, 0, 196609, 1835062, 0, 196609, 1835063, 0, 196609, 1835064, 0, 196609, 1835065, 0, 196609, 1835066, 0, 196609, 1835067, 0, 196609, 1835068, 0, 196609, 1835069, 0, 196609, 1835070, 0, 196609, 1835071, 0, 196609, 1835072, 0, 196609, 1835073, 0, 196609, 1835074, 0, 196609, 1835075, 0, 196609, 1835076, 0, 196609, 1835077, 0, 196609, 1835078, 0, 196609, 1835079, 0, 196609, 1835080, 0, 196609, 1835081, 0, 196609, 1835082, 0, 196609, 1835083, 0, 196609, 1835084, 0, 196609, 1835085, 0, 196609, 1835086, 0, 196609, 1835087, 0, 196609, 1835088, 0, 196609, 1835089, 0, 196609, 1835090, 0, 196609, 1835091, 0, 196609, 1835092, 0, 196609, 1835093, 0, 196610, 2031613, 1, 0, 2031614, 1, 0, 2031615, 1, 0, 1966080, 1, 0, 1966081, 1, 0, 1966082, 1, 0, 1966083, 1, 0, 1966084, 1, 0, 1966085, 1, 0, 1966086, 1, 0, 1966087, 1, 0, 1966088, 1, 0, 1966089, 1, 0, 1966090, 1, 0, 1966091, 1, 0, 1966092, 1, 0, 1966093, 1, 0, 1966094, 1, 0, 1966095, 1, 0, 1966096, 1, 0, 1966097, 1, 0, 1966098, 1, 0, 1966099, 1, 0, 1966100, 1, 0, 1966101, 1, 0, 1966102, 1, 0, 1966103, 1, 0, 1966104, 1, 0, 1966105, 1, 0, 1966106, 1, 0, 1966107, 1, 0, 1966108, 1, 0, 1966109, 1, 0, 1966110, 1, 0, 1966111, 1, 0, 1966112, 1, 0, 1966113, 1, 0, 1966114, 1, 0, 1966115, 1, 0, 1966116, 1, 0, 1966117, 1, 0, 1966118, 1, 0, 1966119, 1, 0, 1966120, 1, 0, 1966121, 1, 0, 1966122, 1, 0, 1966123, 1, 0, 1966124, 1, 0, 1966125, 1, 0, 1966126, 1, 0, 1966127, 1, 0, 1966128, 1, 0, 1966129, 1, 0, 1966130, 1, 0, 1966131, 1, 0, 1966132, 1, 0, 1966133, 1, 0, 1966134, 1, 0, 1966135, 1, 0, 1966136, 1, 0, 1966137, 1, 0, 1966138, 1, 0, 1966139, 1, 0, 1966140, 1, 0, 1966141, 1, 0, 1966142, 1, 0, 1966143, 1, 0, 1966144, 1, 0, 1966145, 1, 0, 1966146, 1, 0, 1966147, 1, 0, 1966148, 1, 0, 1966149, 1, 0, 1966150, 1, 0, 1966151, 1, 0, 1966152, 1, 0, 1966153, 1, 0, 1966154, 1, 0, 1966155, 1, 0, 1966156, 1, 0, 1966157, 1, 0, 1966158, 1, 0, 1966159, 1, 0, 1966160, 1, 0, 1966161, 1, 0, 1966162, 1, 0, 1966163, 1, 0, 2097149, 1, 0, 2097150, 1, 0, 2097151, 1, 0, 2031616, 1, 0, 2031617, 1, 0, 2031618, 1, 0, 2031619, 1, 0, 2031620, 1, 0, 2031621, 1, 0, 2031622, 1, 0, 2031623, 1, 0, 2031624, 1, 0, 2031625, 1, 0, 2031626, 1, 0, 2031627, 1, 0, 2031628, 1, 0, 2031629, 1, 0, 2031630, 1, 0, 2031631, 1, 0, 2031632, 1, 0, 2031633, 1, 0, 2031634, 1, 0, 2031635, 1, 0, 2031636, 1, 0, 2031637, 1, 0, 2031638, 1, 0, 2031639, 1, 0, 2031640, 1, 0, 2031641, 1, 0, 2031642, 1, 0, 2031643, 1, 0, 2031644, 1, 0, 2031645, 1, 0, 2031646, 1, 0, 2031647, 1, 0, 2031648, 1, 0, 2031649, 1, 0, 2031650, 1, 0, 2031651, 1, 0, 2031652, 1, 0, 2031653, 1, 0, 2031654, 1, 0, 2031655, 1, 0, 2031656, 1, 0, 2031657, 1, 0, 2031658, 1, 0, 2031659, 1, 0, 2031660, 1, 0, 2031661, 1, 0, 2031662, 1, 0, 2031663, 1, 0, 2031664, 1, 0, 2031665, 1, 0, 2031666, 1, 0, 2031667, 1, 0, 2031668, 1, 0, 2031669, 1, 0, 2031670, 1, 0, 2031671, 1, 0, 2031672, 1, 0, 2031673, 1, 0, 2031674, 1, 0, 2031675, 1, 0, 2031676, 1, 0, 2031677, 1, 0, 2031678, 1, 0, 2031679, 1, 0, 2031680, 1, 0, 2031681, 1, 0, 2031682, 1, 0, 2031683, 1, 0, 2031684, 1, 0, 2031685, 1, 0, 2031686, 1, 0, 2031687, 1, 0, 2031688, 1, 0, 2031689, 1, 0, 2031690, 1, 0, 2031691, 1, 0, 2031692, 1, 0, 2031693, 1, 0, 2031694, 1, 0, 2031695, 1, 0, 2031696, 1, 0, 2031697, 1, 0, 2031698, 1, 0, 2031699, 1, 0, 2162685, 1, 0, 2162686, 1, 0, 2162687, 1, 0, 2097152, 1, 0, 2097153, 1, 0, 2097154, 1, 0, 2097155, 1, 0, 2097156, 1, 0, 2097157, 1, 0, 2097158, 1, 0, 2097159, 1, 0, 2097160, 1, 0, 2097161, 1, 0, 2097162, 1, 0, 2097163, 1, 0, 2097164, 1, 0, 2097165, 1, 0, 2097166, 1, 0, 2097167, 1, 0, 2097168, 1, 0, 2097169, 1, 0, 2097170, 1, 0, 2097171, 1, 0, 2097172, 1, 0, 2097173, 1, 0, 2097174, 1, 0, 2097175, 1, 0, 2097176, 1, 0, 2097177, 1, 0, 2097178, 1, 0, 2097179, 1, 0, 2097180, 1, 0, 2097181, 1, 0, 2097182, 1, 0, 2097183, 1, 0, 2097184, 1, 0, 2097185, 1, 0, 2097186, 1, 0, 2097187, 1, 0, 2097188, 1, 0, 2097189, 1, 0, 2097190, 1, 0, 2097191, 1, 0, 2097192, 1, 0, 2097193, 1, 0, 2097194, 1, 0, 2097195, 1, 0, 2097196, 1, 0, 2097197, 1, 0, 2097198, 1, 0, 2097199, 1, 0, 2097200, 1, 0, 2097201, 1, 0, 2097202, 1, 0, 2097203, 1, 0, 2097204, 1, 0, 2097205, 1, 0, 2097206, 1, 0, 2097207, 1, 0, 2097208, 1, 0, 2097209, 1, 0, 2097210, 1, 0, 2097211, 1, 0, 2097212, 1, 0, 2097213, 1, 0, 2097214, 1, 0, 2097215, 1, 0, 2097216, 1, 0, 2097217, 1, 0, 2097218, 1, 0, 2097219, 1, 0, 2097220, 1, 0, 2097221, 1, 0, 2097222, 1, 0, 2097223, 1, 0, 2097224, 1, 0, 2097225, 1, 0, 2097226, 1, 0, 2097227, 1, 0, 2097228, 1, 0, 2097229, 1, 0, 2097230, 1, 0, 2097231, 1, 0, 2097232, 1, 0, 2097233, 1, 0, 2097234, 1, 0, 2097235, 1, 0, 2228221, 1, 0, 2228222, 1, 0, 2228223, 1, 0, 2162688, 1, 0, 2162689, 1, 0, 2162690, 1, 0, 2162691, 1, 0, 2162692, 1, 0, 2162693, 1, 0, 2162694, 1, 0, 2162695, 1, 0, 2162696, 1, 0, 2162697, 1, 0, 2162698, 1, 0, 2162699, 1, 0, 2162700, 1, 0, 2162701, 1, 0, 2162702, 1, 0, 2162703, 1, 0, 2162704, 1, 0, 2162705, 1, 0, 2162706, 1, 0, 2162707, 1, 0, 2162708, 1, 0, 2162709, 1, 0, 2162710, 1, 0, 2162711, 1, 0, 2162712, 1, 0, 2162713, 1, 0, 2162714, 1, 0, 2162715, 1, 0, 2162716, 1, 0, 2162717, 1, 0, 2162718, 1, 0, 2162719, 1, 0, 2162720, 1, 0, 2162721, 1, 0, 2162722, 1, 0, 2162723, 1, 0, 2162724, 1, 0, 2162725, 1, 0, 2162726, 1, 0, 2162727, 1, 0, 2162728, 1, 0, 2162729, 1, 0, 2162730, 1, 0, 2162731, 1, 0, 2162732, 1, 0, 2162733, 1, 0, 2162734, 1, 0, 2162735, 1, 0, 2162736, 1, 0, 2162737, 1, 0, 2162738, 1, 0, 2162739, 1, 0, 2162740, 1, 0, 2162741, 1, 0, 2162742, 1, 0, 2162743, 1, 0, 2162744, 1, 0, 2162745, 1, 0, 2162746, 1, 0, 2162747, 1, 0, 2162748, 1, 0, 2162749, 1, 0, 2162750, 1, 0, 2162751, 1, 0, 2162752, 1, 0, 2162753, 1, 0, 2162754, 1, 0, 2162755, 1, 0, 2162756, 1, 0, 2162757, 1, 0, 2162758, 1, 0, 2162759, 1, 0, 2162760, 1, 0, 2162761, 1, 0, 2162762, 1, 0, 2162763, 1, 0, 2162764, 1, 0, 2162765, 1, 0, 2162766, 1, 0, 2162767, 1, 0, 2162768, 1, 0, 2162769, 1, 0, 2162770, 1, 0, 2162771, 1, 0, 2293756, 0, 196608, 2293757, 0, 196609, 2293758, 0, 196609, 2293759, 0, 196609, 2228224, 0, 196609, 2228225, 0, 196609, 2228226, 0, 196609, 2228227, 0, 196609, 2228228, 0, 196609, 2228229, 0, 6, 2228230, 0, 1, 2228231, 0, 1, 2228232, 0, 1, 2228233, 0, 1, 2228234, 0, 1, 2228235, 0, 1, 2228236, 0, 1, 2228237, 0, 1, 2228238, 0, 1, 2228239, 0, 1, 2228240, 0, 1, 2228241, 0, 1, 2228242, 0, 1, 2228243, 0, 1, 2228244, 0, 5, 2228245, 0, 196609, 2228246, 0, 196609, 2228247, 0, 196609, 2228248, 0, 196609, 2228249, 0, 196609, 2228250, 0, 196609, 2228251, 0, 196609, 2228252, 0, 196609, 2228253, 0, 196609, 2228254, 0, 196609, 2228255, 0, 196609, 2228256, 0, 196609, 2228257, 0, 196609, 2228258, 0, 196609, 2228259, 0, 196609, 2228260, 0, 196609, 2228261, 0, 196609, 2228262, 0, 196609, 2228263, 0, 196609, 2228264, 0, 196609, 2228265, 0, 196609, 2228266, 0, 196609, 2228267, 0, 196609, 2228268, 0, 196609, 2228269, 0, 196609, 2228270, 0, 196609, 2228271, 0, 196609, 2228272, 0, 196609, 2228273, 0, 196609, 2228274, 0, 196609, 2228275, 0, 196609, 2228276, 0, 196609, 2228277, 0, 196609, 2228278, 0, 196609, 2228279, 0, 196609, 2228280, 0, 196609, 2228281, 0, 196609, 2228282, 0, 196609, 2228283, 0, 196609, 2228284, 0, 196609, 2228285, 0, 196609, 2228286, 0, 196609, 2228287, 0, 196609, 2228288, 0, 196609, 2228289, 0, 196609, 2228290, 0, 196609, 2228291, 0, 196609, 2228292, 0, 196609, 2228293, 0, 196609, 2228294, 0, 196609, 2228295, 0, 196609, 2228296, 0, 196609, 2228297, 0, 196609, 2228298, 0, 196609, 2228299, 0, 196609, 2228300, 0, 196609, 2228301, 0, 196609, 2228302, 0, 196609, 2228303, 0, 196609, 2228304, 0, 196609, 2228305, 0, 196609, 2228306, 0, 196609, 2228307, 0, 196609, 2228308, 0, 196609, 2228309, 0, 196610, 2293765, 0, 131072, 2293766, 0, 131073, 2293767, 0, 131073, 2293768, 0, 131073, 2293769, 0, 131073, 2293770, 0, 131073, 2293771, 0, 131073, 2293772, 0, 131073, 2293773, 0, 131073, 2293774, 0, 131073, 2293775, 0, 131073, 2293776, 0, 131073, 2293777, 0, 131073, 2293778, 0, 131073, 2293779, 0, 131073, 2293780, 0, 131074 )

[node name="CliffTileset" type="TileMap" parent="."]
tile_set = ExtResource( 10 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 983038, 2, 196608, 983039, 2, 196609, 917504, 2, 196609, 917505, 2, 196609, 917506, 2, 196609, 917507, 2, 196609, 917508, 2, 196609, 917509, 2, 196609, 917510, 2, 196609, 917511, 2, 196609, 917512, 2, 196609, 917513, 2, 196609, 917514, 2, 196609, 917515, 2, 196609, 917516, 2, 196609, 917517, 2, 196609, 917518, 2, 196609, 917519, 2, 196609, 917520, 2, 196609, 917521, 2, 196609, 917522, 2, 196609, 917523, 2, 196609, 917524, 2, 196609, 917525, 2, 196609, 917526, 2, 196609, 917527, 2, 196609, 917528, 2, 196609, 917529, 2, 196609, 917530, 2, 196609, 917531, 2, 196609, 917532, 2, 196609, 917533, 2, 196609, 917534, 2, 196609, 917535, 2, 196609, 917536, 2, 196609, 917537, 2, 196609, 917538, 2, 196609, 917539, 2, 196609, 917540, 2, 196609, 917541, 2, 196609, 917542, 2, 196609, 917543, 2, 196609, 917544, 2, 196609, 917545, 2, 196609, 917546, 2, 196610, 1179646, 2, 196608, 1179647, 2, 196609, 1114112, 2, 196609, 1114113, 2, 196609, 1114114, 2, 196609, 1114115, 2, 196609, 1114116, 2, 196609, 1114117, 2, 196609, 1114118, 2, 196609, 1114119, 2, 196609, 1114120, 2, 196609, 1114121, 2, 196609, 1114122, 2, 196609, 1114123, 2, 196609, 1114124, 2, 196609, 1114125, 2, 196609, 1114126, 2, 196609, 1114127, 2, 196609, 1114128, 2, 196609, 1114129, 2, 196609, 1114130, 2, 196609, 1114131, 2, 196609, 1114132, 2, 196609, 1114133, 2, 196609, 1114134, 2, 196609, 1114135, 2, 196609, 1114136, 2, 196609, 1114137, 2, 196609, 1114138, 2, 196609, 1114139, 2, 196609, 1114140, 2, 196609, 1114141, 2, 196609, 1114142, 2, 196609, 1114143, 2, 196609, 1114144, 2, 196609, 1114145, 2, 196609, 1114146, 2, 196609, 1114147, 2, 196609, 1114148, 2, 196609, 1114149, 2, 196609, 1114150, 2, 196609, 1114151, 2, 196609, 1114152, 2, 196609, 1114153, 2, 196609, 1114154, 2, 196610, 2752601, 2, 196611, 3604505, 2, 196611 )

[node name="Trash1" type="Sprite" parent="."]
position = Vector2( 430.052, 503.016 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="BG" type="ColorRect" parent="Trash1"]
margin_left = -66.0395
margin_top = 60.6463
margin_right = 70.9605
margin_bottom = 124.646
color = Color( 0.643137, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Trash1"]
margin_left = -50.0
margin_top = 65.7143
margin_right = 48.0
margin_bottom = 162.714
custom_fonts/font = SubResource( 3 )
text = "2.3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Trash1"]
margin_left = -36.7831
margin_top = -186.952
margin_right = 80.2169
margin_bottom = -30.9523
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Trash1"]
anims/swipe = SubResource( 4 )

[node name="TextureRect_down3" type="TextureRect" parent="Trash1"]
modulate = Color( 1, 1, 1, 0.929412 )
margin_left = -41.6246
margin_top = 127.975
margin_right = 75.3754
margin_bottom = 283.975
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer_down3" type="AnimationPlayer" parent="Trash1"]
anims/swipe = SubResource( 5 )

[node name="ReferenceRect1" type="ReferenceRect" parent="Trash1"]
margin_left = -117.0
margin_top = -206.0
margin_right = 113.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trash2" type="Sprite" parent="."]
position = Vector2( 678.098, 503.016 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Trash2"]
margin_left = -66.1048
margin_top = 60.6459
margin_right = 70.8952
margin_bottom = 124.646
color = Color( 0.643137, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Trash2"]
margin_left = -50.0653
margin_top = 65.7139
margin_right = 47.9347
margin_bottom = 162.714
custom_fonts/font = SubResource( 3 )
text = "8.6"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Trash2"]
modulate = Color( 1, 1, 1, 0.945367 )
margin_left = -38.2774
margin_top = -192.025
margin_right = 78.7226
margin_bottom = -36.0253
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Trash2"]
anims/swipe = SubResource( 6 )

[node name="TextureRect_down2" type="TextureRect" parent="Trash2"]
modulate = Color( 1, 1, 1, 0.945367 )
margin_left = -37.4046
margin_top = 127.975
margin_right = 79.5954
margin_bottom = 283.975
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer_down2" type="AnimationPlayer" parent="Trash2"]
anims/swipe = SubResource( 7 )

[node name="ReferenceRect2" type="ReferenceRect" parent="Trash2"]
margin_left = -86.0
margin_top = -215.0
margin_right = 110.0
margin_bottom = 283.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trash3" type="Sprite" parent="."]
position = Vector2( 923.709, 503.016 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Trash3"]
margin_left = -62.6919
margin_top = 60.6459
margin_right = 74.3081
margin_bottom = 124.646
color = Color( 0.643137, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Trash3"]
margin_left = -45.2239
margin_top = 65.7139
margin_right = 52.7761
margin_bottom = 162.714
custom_fonts/font = SubResource( 3 )
text = "2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Trash3"]
modulate = Color( 1, 1, 1, 0.945367 )
margin_left = -38.2774
margin_top = -192.025
margin_right = 78.7226
margin_bottom = -36.0253
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Trash3"]
anims/swipe = SubResource( 8 )

[node name="TextureRect_down" type="TextureRect" parent="Trash3"]
modulate = Color( 1, 1, 1, 0.945367 )
margin_left = -38.2774
margin_top = 127.975
margin_right = 78.7226
margin_bottom = 283.975
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer_down" type="AnimationPlayer" parent="Trash3"]
anims/swipe = SubResource( 9 )

[node name="ReferenceRect3" type="ReferenceRect" parent="Trash3"]
margin_left = -81.0
margin_top = -210.0
margin_right = 105.0
margin_bottom = 261.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 548.0
margin_top = 275.0
margin_right = 881.0
margin_bottom = 347.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 5
text = "ปัดเศษขึ้นหรือลง"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Label" parent="Title"]
margin_left = 39.507
margin_top = -87.1537
margin_right = 216.507
margin_bottom = 9.84634
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 6
text = "ปัดขยะ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioCorrect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = 11.52

[node name="AudioWrong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = 11.52
[connection signal="mouse_entered" from="Trash1/ReferenceRect1" to="." method="_on_ReferenceRect1_mouse_entered"]
[connection signal="mouse_exited" from="Trash1/ReferenceRect1" to="." method="_on_ReferenceRect1_mouse_exited"]
[connection signal="mouse_entered" from="Trash2/ReferenceRect2" to="." method="_on_ReferenceRect2_mouse_entered"]
[connection signal="mouse_exited" from="Trash2/ReferenceRect2" to="." method="_on_ReferenceRect2_mouse_exited"]
[connection signal="mouse_entered" from="Trash3/ReferenceRect3" to="." method="_on_ReferenceRect3_mouse_entered"]
[connection signal="mouse_exited" from="Trash3/ReferenceRect3" to="." method="_on_ReferenceRect3_mouse_exited"]
